--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -91,6 +91,8 @@ dependencies {
     implementation "androidx.appcompat:appcompat:$appcompat_version"
     implementation 'androidx.core:core-ktx:1.5.0'
     implementation 'com.android.billingclient:billing:4.0.0'
+
+    // firebase
     implementation 'com.google.firebase:firebase-crashlytics:18.0.1'
     implementation 'com.google.firebase:firebase-analytics:19.0.0'
     implementation 'com.google.firebase:firebase-database-ktx:20.0.0'
@@ -125,7 +127,7 @@ dependencies {
     // multiline-collapsingtoolbar
     implementation 'net.opacapp:multiline-collapsingtoolbar:27.1.1'
 
-    /* ViewPager2 */
+    // ViewPager2
     implementation "androidx.viewpager2:viewpager2:1.0.0"
 
     // PhotoView
